Atualização da galeria, criado menu de serviços ainda vazio e criação das páginas usando as cores do Portinari

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,4 +1,4 @@
-<po-page-default p-title="Contato">
+<po-page-default class="po-text-color-04" p-title="Contato">
 
 <p class="po-font-text">Entre em contato conosco:
     <a href="mailto:mailto:bemmaiscomercial@gmail.com">bemmaiscomercial@gmail.com</a>
