--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -1,29 +1,28 @@
-<po-page-default p-title="Galeria">
-    <div class="po-row">
-        <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-01.jpeg"/>
-    </div>
+<po-page-default class="po-text-color-04" p-title="Galeria">
 
-    <div class="po-row">
-        <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-02.jpeg"/>
-    </div>
+    <po-widget id="recepcao">
+        <p class="po-font-subtitle">Recepção</p>
+        <div class="po-row">
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" src="/assets/galeria/bem-mais-saude-07.jpeg"/>
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" src="/assets/galeria/bem-mais-saude-01.jpeg"/>
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" src="/assets/galeria/bem-mais-saude-04.jpeg"/>
+        </div>
+        <!--<div class="po-row">
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-01.jpeg"/>
+        </div>
+        <div class="po-row">
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-04.jpeg"/>
+        </div>-->
+    </po-widget>
 
-    <div class="po-row">
-        <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-03.jpeg"/>
-    </div>
+    <po-divider></po-divider>
 
-    <div class="po-row">
-        <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-04.jpeg"/>
-    </div>
-
-    <div class="po-row">
-        <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-05.jpeg"/>
-    </div>
-
-    <div class="po-row">
-        <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-06.jpeg"/>
-    </div>
-
-    <div class="po-row">
-        <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/galeria/bem-mais-saude-07.jpeg"/>
-    </div>
+    <po-widget id="salas">
+        <p class="po-font-subtitle">Salas</p>
+        <div class="po-row">
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" src="/assets/galeria/bem-mais-saude-03.jpeg"/>
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" src="/assets/galeria/bem-mais-saude-05.jpeg"/>
+            <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" src="/assets/galeria/bem-mais-saude-06.jpeg"/>
+        </div>
+    </po-widget>
 </po-page-default>
