--- a/src/app/valores/valores.component.html
+++ b/src/app/valores/valores.component.html
@@ -1,4 +1,4 @@
-<po-page-default p-title="Valores">
+<po-page-default class="po-text-color-04" p-title="Valores">
 
     <p class="po-row po-font-text">
         Nós da Clínica Bem+ Saúde e Bem-estar acreditamos que a confiança é a base do relacionamento com nossos clientes e parceiros, e por isso, norteamos todo o nosso atendimento nos seguintes valores:
