--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<po-page-default p-title="Bem vindo">
+<po-page-default class="po-text-color-04" p-title="Bem vindo">
     <div class="po-row">
         <img class="po-xl-3 po-lg-4 po-md-5 po-sm-6" style="padding-bottom: 2em" src="/assets/logo.png"/>
     </div>
     <div class="po-row">
-        <p>A clínica Bem + Saúde está de portas abertas para atender você</p>
+        <p class="po-font-text">A clínica Bem + Saúde está de portas abertas para atender você</p>
     </div>
 </po-page-default>
