--- a/src/app/missao/missao.component.html
+++ b/src/app/missao/missao.component.html
@@ -1,4 +1,4 @@
-<po-page-default p-title="Missão">
+<po-page-default class="po-text-color-04" p-title="Missão">
 
 <p class="po-font-text">
 Atender de forma personalizada os clientes que nos procuram para realizar consultas e acompanhamentos com intuito de investigar diversas doenças, com tratamentos apropriados e específicos para a melhoria da saúde e do bem-estar de cada paciente.
