--- a/src/app/quem-somos/quem-somos.component.html
+++ b/src/app/quem-somos/quem-somos.component.html
@@ -1,13 +1,13 @@
-<po-page-default p-title="Quem somos">
+<po-page-default class="po-text-color-04" p-title="Quem somos">
 
-<p class="po-font-text">
-A Clínica Bem+ Saúde e Bem-estar, foi idealizada em janeiro de 2018 com a intenção de agregar diversas especialidades da área da saúde em uma mesma unidade. Com um ambiente acolhedor, o contato e a relação Terapeuta e paciente é a mais próxima possível, com o intuito de proporcionar as pessoas a possibilidade de um tratamento que possa considerar todos os aspectos do individuo e realizar um trabalho multidisciplinar.
-</p>
+    <p class="po-font-text">
+    A Clínica Bem+ Saúde e Bem-estar, foi idealizada em janeiro de 2018 com a intenção de agregar diversas especialidades da área da saúde em uma mesma unidade. Com um ambiente acolhedor, o contato e a relação Terapeuta e paciente é a mais próxima possível, com o intuito de proporcionar as pessoas a possibilidade de um tratamento que possa considerar todos os aspectos do individuo e realizar um trabalho multidisciplinar.
+    </p>
 
-<br/>
+    <br/>
 
-<p class="po-font-text">
-A proposta dos profissionais da Clínica Bem+ é oferecer o mais elevado padrão de atendimento, nas diferentes especialidades, em um ambiente bem estruturado e agradável, visando proporcionar um atendimento de excelencia, acolhendo a sua demanda de forma singular, visando sempre a saúde, bem-estar e a qualidade de vida do paciente.
-</p>
+    <p class="po-font-text">
+    A proposta dos profissionais da Clínica Bem+ é oferecer o mais elevado padrão de atendimento, nas diferentes especialidades, em um ambiente bem estruturado e agradável, visando proporcionar um atendimento de excelencia, acolhendo a sua demanda de forma singular, visando sempre a saúde, bem-estar e a qualidade de vida do paciente.
+    </p>
 
 </po-page-default>
