Atualização dos serviços e contatos.

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,7 +1,11 @@
 <po-page-default class="po-text-color-04" p-title="Contato">
 
-<p class="po-font-text">Entre em contato conosco:
+<p class="po-font-text">E-mail:
     <a href="mailto:mailto:bemmaiscomercial@gmail.com">bemmaiscomercial@gmail.com</a>
+</p>
+
+<p class="po-font-text">Telefone:
+    <a href="tel:+5511977180815">(11) 97718-8081</a>
 </p>
 
 <p class="po-font-text">Endereço:
