--- a/src/app/valores/valores.component.html
+++ b/src/app/valores/valores.component.html
@@ -4,7 +4,7 @@
         Nós da Clínica Bem+ Saúde e Bem-estar acreditamos que a confiança é a base do relacionamento com nossos clientes e parceiros, e por isso, norteamos todo o nosso atendimento nos seguintes valores:
     </p>
 
-    <ul class="po-font-text">
+    <ul class="po-font-text po-ml-2">
         <li>Satisfação do Cliente</li>
         <li>Respeito</li>
         <li>Competência Técnica</li>
